--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,27 @@
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
 
+    <div class="modal fade" tabindex="-1" role="dialog" id="buyerInfoModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">매입자 정보</h4>
+        </div>
+        <div class="modal-body">
+          <strong>계정주소</strong>: <span id="buyerAddress"></span><br/>
+          <strong>이름</strong>: <span id="buyerName"></span><br/>
+          <strong>나이</strong>: <span id="buyerAge"></span>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+          <button type="button" class="btn btn-primary" onclick="App.buyRealEstate(); return false;">제출</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
