--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
       </div>
     </div>
 
+    <div id="events"></div>
+
     <div class="row" id="list">
       <!-- 매물 리스트 -->
     </div>
@@ -95,7 +97,6 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
-          <button type="button" class="btn btn-primary" onclick="App.buyRealEstate(); return false;">제출</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
